# kmd-regelsim

./: .gitignore  Cargo.toml  README.md  kmd-regelsim.md
.cursor/rules/: wdd.mdc
.wdd/: BACKLOG.md  CONTEXT.md  PROGRESS.md  PROJECT.md  config.json
.wdd/epics/: epic-01-rust-engine-foundation.md  epic-02-bridge-and-render-layer.md  epic-03-geo-and-performance.md  epic-04-demo.md
.wdd/templates/: integration.md
.wdd/wards/: ward-001.md  ward-002.md  ward-003.md  ward-004.md  ward-005.md  ward-005b.md  ward-006.md  ward-007.md  ward-008.md  ward-009.md  ward-010.md  ward-011.md  ward-012.md
src/: borger_generator.rs  borger_store.rs  borger_view.rs  dependency_graph.rs  error.rs  eval_context.rs  lib.rs  rule_engine.rs  types.rs  wasm_api.rs
src/batch/: aggregator.rs  evaluator.rs  histogram.rs  mod.rs  top_n.rs  types.rs
src/explainer/: case_explainer.rs  mod.rs  threshold_detector.rs
src/geo/: geo_aggregator.rs  mod.rs
src/rules/: boerne_ydelse.rs  boligstoette.rs  kontanthjaelp.rs  mod.rs
src/scenario/: diff.rs  incremental.rs  mod.rs  param_mapping.rs  scenario.rs
tests/: ward_001_borger_store.rs  ward_002_rule_engine.rs  ward_003_batch.rs  ward_004_scenario.rs  ward_005_wasm_bridge.rs  ward_007_explainer.rs  ward_008_geo.rs  ward_009_performance.rs  ward_010_error_handling.rs
web/: bridge.js  dashboard.js  index.html  styles.css  tests.html  tests_ward7.html
web/__tests__/: tests_ward10.html  tests_ward6.html  tests_ward7.html  tests_ward8.html
web/components/: affected_list.js  case_panel.js  histogram.js  kommune_kort.js  rule_graph.js  (+4 more)
(+1 files in other folders)
