[package]
name = "kmd-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "kmd_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "kmd-engine"
path = "src/main.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
